<resources>
    <string name="app_name">Champlain College Quiz</string>
    <string name="building_button">Buildings</string>
    <string name="classes_button">Classes</string>
    <string name="faculty_button">Faculty</string>
    <string name="score_button">Scores</string>
    <string name="next_button">Next</string>
    <string name="content_description">Building</string>
    <string name="hint_button">Hint</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_score">Enter Score</string>
    <string name="home_button">Home</string>
    <string name="starting_score_text">Score: 0</string>
</resources>