<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:paddingTop="10dp"
        android:text="@string/starting_score_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:paddingTop="50dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/answer1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:backgroundTint="#236192"
        android:text=""
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/answer2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:backgroundTint="#236192"
        android:text=""
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/answer3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:backgroundTint="#236192"
        android:text=""
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/answer4_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:backgroundTint="#236192"
        android:text=""
        android:textColor="#FFFFFF" />

    <ImageButton
        android:id="@+id/answer1_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/answer2_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/answer3_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/answer4_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".01"
        android:visibility="gone" />

    <Button
        android:id="@+id/hint_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:backgroundTint="#236192"
        android:text="@string/hint_button"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:backgroundTint="#236192"
        android:clickable="false"
        android:drawableEnd="@drawable/arrow_point_right"
        android:enabled="false"
        android:text="@string/next_button"
        android:textColor="#FFFFFF" />

</LinearLayout>